--- a/templates/credit_form.html
+++ b/templates/credit_form.html
@@ -69,7 +69,7 @@
             <a class="navbar-brand fw-bold" href="#">🎓 Credit Tracker</a>
             <div class="ms-auto">
                 <a href="/basket-summary-report" class="btn btn-outline-info">
-                    <i class="bi bi-bar-chart-line-fill"></i> Basket Summary
+                    <i class="bi bi-bar-chart-line-fill"></i> Section Wise Credit Report
                 </a>
             </div>
         </div>
