--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Admin Dashboard - Result Upload</title>
+    <link rel="icon" type="image/png" href="/static/exam-results2.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body { background-color: #f4f6f9; }
