--- a/templates/admin_login_password.html
+++ b/templates/admin_login_password.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Admin Login</title>
+    <link rel="icon" type="image/png" href="/static/exam-results2.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <style>
