--- a/templates/basket_summary_report.html
+++ b/templates/basket_summary_report.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Basket Summary Report</title>
+  <link rel="icon" type="image/png" href="/static/exam-results2.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="bg-light">
