--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
   <meta name="google-site-verification" content="q-hS7EvYlKe6V0IjU8-3GiB0jE1Pq_hvW_mga1Fpfp0" />
   <title>My Result Portal-CUTM</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  
+  <link rel="icon" type="image/png" href="/static/exam-results2.png">
   <!-- Bootstrap 5 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
