--- a/templates/manage_admins.html
+++ b/templates/manage_admins.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Manage Admins</title>
+    <link rel="icon" type="image/png" href="/static/exam-results2.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="bg-light">
