--- a/templates/result.html
+++ b/templates/result.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Student Result Report</title>
+    <link rel="icon" type="image/png" href="/static/exam-results2.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
